@@ -38,12 +38,30 @@
 			<dd style="text-decoration: line-through;">BoPoMoFo support</dd>
 			<dt style="text-decoration: line-through;">Ver 0.5.2</dt>
 			<dd style="text-decoration: line-through;">Further Phonetics symbol support.</dd>
-			<dt>Ver 0.6</dt>
-			<dd>Lite database version (To be discussed)</dd>
-			<dt>Ver 0.7</dt>
-			<dd>CEDICT support</dd>
-			<dt>Ver 0.8</dt>
-			<dd>Dictionary function support</dd>
+			<dt>Ver 0.6.0</dt>
+			<dd>Split the huge database into smaller ones according to the type and usefulness of fields.</dd>
+			<dt>Ver 0.6.2</dt>
+			<dd>Support user-defined database.</dd>
+			<dt>Ver 0.7.0</dt>
+			<dd>Dictionary and sorting API.</dd>
+			<dt>Ver 0.7.2</dt>
+			<dd>CEDICT support.</dd>
+			<dt>Ver 0.8.0</dt>
+			<dd>Python binding.</dd>
+			<dt>Ver 0.8.2</dt>
+			<dd>Interface with iBus.</dd>
+			<dt>Ver 0.9.0</dt>
+			<dd>Phrase input method.</dd>
+			<dt>Ver 0.9.2</dt>
+			<dd>Merge with chewing upstream.</dd>
+			<dt>Ver 0.9.4</dt>
+			<dd>Bayesian phrase input method.</dd>
+			<dt>Ver 1.0.0</dt>
+			<dd>Japanese support.</dd>
+			<dt>Ver 1.0.2</dt>
+			<dd>Korean support.</dd>
+			<dt>Ver 1.1.0</dt>
+			<dd>Windows port.</dd>
 		    </dl>
 		</div>
 	    </div>
